Fix misalignment of icons

--- a/packages/cd-components/src/organisms/actionIcons/actionIcons.module.scss
+++ b/packages/cd-components/src/organisms/actionIcons/actionIcons.module.scss
@@ -2,10 +2,11 @@
 
 .container {
   display: flex;
+  margin-left: 18rem;
 
   .icon {
     color: $medium-grey;
     cursor: pointer;
-    font-size: 1rem;
+    font-size: 1.25rem;
   }
 }
